--- a/PRY2-Analisis-CCSS.csproj
+++ b/PRY2-Analisis-CCSS.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consultorios.cs" />
+    <Compile Include="Especialidad.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
