--- a/PRY2-Analisis-CCSS.csproj
+++ b/PRY2-Analisis-CCSS.csproj
@@ -57,7 +57,9 @@
     <Compile Include="Pacientes.cs" />
     <Compile Include="Principal.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Prompt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tiquete.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
