Cambios en colores de interfaz
Co-authored-by: Erincam09 <erincam09@gmail.com>

--- a/PRY2-Analisis-CCSS.csproj
+++ b/PRY2-Analisis-CCSS.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Prompt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tiquete.cs" />
+    <Compile Include="ToolsUI.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
