--- a/PRY2-Analisis-CCSS.csproj
+++ b/PRY2-Analisis-CCSS.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColaPrioridad.cs" />
     <Compile Include="Consultorios.cs" />
     <Compile Include="Especialidad.cs" />
     <Compile Include="Form1.cs">
